# mdfr

./: .gitignore  Cargo.toml  README.md  config.toml  mdfr.h  pyproject.toml
.github/workflows/: py-mac-aarch64-apple-release.yml  py-release-manylinux.yml  py-release-windows-macos.yml  rust.yml
benches/: mdf_benchmark.rs  python_mdfinfo.py
src/: c_api.rs  data_holder.rs  lib.rs  main.rs  mdfinfo.rs  mdfr.rs  mdfreader.rs  mdfwriter.rs  tests.rs
src/channel_data/: channel_data.rs  complex_arrow.rs  tensor_arrow.rs
src/data_holder/: arrow_helpers.rs  channel_data.rs  complex_arrow.rs  dtype.rs  tensor_arrow.rs
src/export/: arrow.rs  hdf5.rs  mod.rs  numpy.rs  parquet.rs  polars.rs  python_arrow_helpers.rs  tensor.rs
src/mdfinfo/: mdfinfo3.rs  mdfinfo4.rs  sym_buf_reader.rs
src/mdfreader/: arrow.rs  arrow_helpers.rs  channel_data.rs  complex_arrow.rs  converions4.rs  conversions3.rs  conversions4.rs  data_read3.rs  data_read4.rs  mdfreader3.rs  mdfreader4.rs
src/mdfwriter/: mdfwriter3.rs  mdfwriter4.rs
test_files/: test_basic.mf4
