[package]
name = "mdfr"
version = "0.4.1"
description = "A package for reading and writing MDF files"
authors = ["ratal <ratal@ratal.org>"]
edition = "2021"
repository = "https://github.com/ratal/mdfr/"
categories = ["encoding", "filesystem"]
license = "GPL-3.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4" # for input arguments
anyhow = { version = "1.0", features = ["backtrace"] } # error handling
log = "0.4" # to log events
byteorder = "1.4" # for bytes conversions
binrw = "0.11" # to efficiently read blocks
num = { version = "0.4", features = ["serde"] } # for complex numbers
half = "2" # for f16 handling
encoding_rs = "0.8" # for endian management and bytes to text conversion (utf8, SBC, UTF16)
codepage = "0.1" # to convert code page into encoding
chrono = "0.4" # for time conversion
ndarray = { version = "0.15", features = [
    "rayon",
    "serde",
    "approx",
] } # for nd arrays
ndarray-stats = "0.5" # for nd array statsq
rayon = "1.5" # for general purpose parallel computations
crossbeam-channel = "0.5" # for efficient channel between threads
parking_lot = "0.12" # for efficient mutex
roxmltree = "0.18" # for xml parsing
yazi = "0.1" # for DZ block data deflate
transpose = "0.2" # for DZBlock transpose
numpy = "0.19" # export rust ndarrays into numpy
fasteval = "0.2" # for algebraic conversion
itertools = "0.11"
serde = { version = "1.0", features = ["derive"] } # for serialization
whoami = "1.2" # to get user nam for writing file
rand = "0.8" # for random numbers
parquet2 = "0.17" # for export to parquet file format
arrow2 = { version = "0.17", features = [
    "compute",
    "io_parquet",
    "io_parquet_compression",
] } # for efficient data storing in memory
polars = { version = "0.32", features = [
    "dtype-full",
    "object",
    "fmt",
] } # for python dataframe
libc = "0.2" # for the C api

[dev-dependencies]
criterion = "0.5" # for benchmark

[build-dependencies]
cbindgen = "0.25" # to generate C api headers

[lib]
name = "mdfr"
crate-type = ["rlib", "cdylib"]

[dependencies.pyo3]
version = "0.19"
features = ["extension-module", "num-complex", "anyhow"]

[[bench]]
name = "mdf_benchmark"
harness = false

[profile.release]
opt-level = 3
debug = false
lto = true

[profile.bench]
debug = false
opt-level = 3
lto = true

[profile.dev]
debug = 2
lto = false
opt-level = 0
